--- a/styles.css
+++ b/styles.css
@@ -110,3 +110,9 @@
 .hsuforum_discussion_controls .forumaddnew {float: left;}
 .hsuforum_discussion_controls {padding-bottom: 5px;}
 .hsuforum_highlightposter {font-weight: bold;}
+.hsuforum_discussion_sort .hsuforum_discussion_sort_key {float: left;}
+.hsuforumtopicnav {margin: 5px;}
+.hsuforumprevtopic {font-weight: bold; float:left;}
+.hsuforum_no_nexttopic .hsuforumprevtopic {float:none;}
+.hsuforumnexttopic {font-weight: bold; text-align:right;}
+.mod_hsuforum_posts_container .ygtvfocus {background-color: inherit;}
