INT-3297 & INT-3570: Change to Advanced Forum View in Content Modal Dragging Behavior

--- a/styles.css
+++ b/styles.css
@@ -147,3 +147,5 @@
 #local-joulegrader .content .mod_hsuforum_posts_container,
 #local-joulegrader .content .mod_hsuforum_posts_container .content {text-align: left; margin-right: 0; overflow: hidden;}
 #local-joulegrader .content .mod_hsuforum_posts_container {margin-right: 10px; }
+
+.hsuforum_postincontext_dialog .yui3-widget-hd { cursor: move; }
