--- a/styles.css
+++ b/styles.css
@@ -164,3 +164,6 @@ span.unread {
 #local-joulegrader .content .mod_hsuforum_posts_container {margin-right: 10px; }
 
 .hsuforum_postincontext_dialog .yui3-widget-hd { cursor: move; }
+
+.path-mod-hsuforum #gradetype_warning.hidden { display: none; }
+.path-mod-hsuforum #gradetype_warning { color: #660000; padding-left: 5px; }
