INT-4156: Apply Moodle 2.3.3 updates to Advanced Forum
Patch created with:
    git diff --stat bac15e5782256c66ebeaff9aa684f016b287474e..ff63a3ad58dd985e27279e3495b0d85b23584a54

AKA git diff Moodle2.3.1+ to Moodle2.3.3

--- a/styles.css
+++ b/styles.css
@@ -101,6 +101,19 @@
 /** Unknown Styles ??? */
 #email .unsubscribelink {margin-top:20px;}
 
+
+/* Forumpost unread
+-------------------------*/
+#page-mod-hsuforum-view .unread,
+.forumpost.unread .row.header,
+.path-course-view .unread,
+span.unread {
+    background-color: #FFD;
+}
+.forumpost.unread .row.header {
+    border-bottom: 1px solid #DDD;
+}
+
 .hsuforum_viewposters th a {vertical-align: top;}
 .hsuforum_viewposters th .commands {display: inline;}
 .hsuforum_viewposters .col_userpic {width: 40px; text-align: center;}
