INT-4739 & INT-4245: The title for the link to subscribe is not descriptive enough or unique

--- a/styles.css
+++ b/styles.css
@@ -57,6 +57,7 @@
 .mod_hsuforum_posts_container .forumheaderlist .discussion .lastpost {white-space: nowrap;text-align: right;}
 .mod_hsuforum_posts_container .forumheaderlist .replies,
 .mod_hsuforum_posts_container .forumheaderlist .discussion .author {white-space: nowrap;}
+.mod_hsuforum_posts_container .forumheaderlist .subscribe {text-align: center}
 
 /** Styles for subscribers.php */
 #page-mod-hsuforum-subscribers .subscriberdiv,
