--- a/styles.css
+++ b/styles.css
@@ -149,6 +149,9 @@ span.unread {
 .hsuforum_nested_wrapper .discussioninfo {float:right; text-align: right; font-size: .8em; }
 .hsuforum_nested_wrapper .discussioninfo .unread {padding: 0;}
 .hsuforum_nested_wrapper .unread .discussioninfo {padding-right: 3px;}
+.hsuforum_nested_wrapper .subscribe .subscribe_label {float: left;}
+.hsuforum_nested_wrapper .subscribe .subscribe_toggle {float: right; margin-top: -1px;}
+.hsuforum_nested_wrapper .subscribe .subscribe_toggle img {height: 16px; width: 16px;}
 .hsuforum_nested_footer {border:1px solid #000; border-top: none; padding: 10px;}
 .hsuforum_nested_footer .commands {text-align:right; font-size: .8em;}
 .hsuforum_nested_footer .forum-post-rating {float:left;}
