--- a/styles.css
+++ b/styles.css
@@ -121,7 +121,7 @@ span.unread {
 .hsuforum_viewposters .col_userpic {width: 40px; text-align: center;}
 .hsuforum_flags {display: inline; padding-left:10px;}
 .hsuforum_flags {display: inline; padding-left:10px;}
-.hsuforum_flag {opacity:.2; -ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=%IEHIDEOPACITY%)"; filter:alpha(opacity=20); padding-right: 3px;}
+.hsuforum_flag {opacity:.2; -ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=20)"; filter:alpha(opacity=20); padding-right: 3px;}
 .hsuforum_flag_active {opacity:1; -ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";filter:alpha(opacity=100);}
 .hsuforum_discussion_controls .singleselect {float: right;}
 .hsuforum_discussion_controls .forumaddnew {float: left;}
