--- a/styles.css
+++ b/styles.css
@@ -87,7 +87,6 @@
 #page-mod-hsuforum-discuss .discussioncontrol.movediscussion .movediscussionoption {}
 
 /** Styles for view.php **/
-.hsuforum_discussion_controls .forumaddnew {margin-bottom: 20px;}
 #page-mod-hsuforum-view .groupmenu {float: left;text-align:left;white-space: nowrap;}
 #page-mod-hsuforum-index .subscription,
 #page-mod-hsuforum-view .subscription {float: right;text-align:right;white-space: nowrap;margin: 5px 0;}
@@ -124,11 +123,14 @@ span.unread {
 .hsuforum_flags {display: inline; padding-left:10px;}
 .hsuforum_flag {opacity:.2; -ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=20)"; filter:alpha(opacity=20); padding-right: 3px;}
 .hsuforum_flag_active {opacity:1; -ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";filter:alpha(opacity=100);}
-.hsuforum_discussion_controls .singleselect {float: right;}
-.hsuforum_discussion_controls .forumaddnew {float: left;}
-.hsuforum_discussion_controls {padding-bottom: 5px;}
+.hsuforum-display-format {text-align: right; margin-bottom: 10px;}
 .hsuforum_highlightposter {font-weight: bold;}
-.hsuforum_discussion_sort .hsuforum_discussion_sort_key {float: left;}
+.hsuforum-discussion-count {float: left; margin: 0}
+.hsuforum-add-discussion {float: right}
+.hsuforum-control-options {margin-top: 10px; margin-bottom: 10px;}
+.hsuforum-control-options .groupselector {float: left}
+.hsuforum_discussion_sort {float: right; white-space: nowrap}
+.hsuforum_discussion_sort_key, .hsuforum_discussion_sort_direction {display: inline-block;}
 .hsuforum_discussion_sort .invisiblefieldset {display: block;}
 .hsuforumtopicnav {margin: 5px;}
 .hsuforumprevtopic {font-weight: bold; float:left;}
