INT-5131: Add discussion is now inline

--- a/styles.css
+++ b/styles.css
@@ -185,6 +185,7 @@ span.unread {
 .hsuforum-threads-wrapper .hsuforum-thread-title span,
 .hsuforum-threads-wrapper .hsuforum-tools,
 .hsuforum-threads-wrapper .hsuforum-thread-nav,
+.hsuforum-threads-wrapper .hsuforum-thread-nav .hidden,
 .hsuforum-threads-wrapper .hsuforum-thread-article-expanded .hsuforum-thread-replies-meta,
 .hsuforum-threads-wrapper .hsuforum-reply-wrapper,
 .hsuforum-threads-wrapper .hsuforum-thread-replies,
