--- a/styles.css
+++ b/styles.css
@@ -182,12 +182,12 @@ span.unread {
 #page-mod-hsuforum-discuss .hsuforum-thread-replies-meta,
 #page-mod-hsuforum-discuss .hsuforum-thread-view,
 #page-mod-hsuforum-discuss .hsuforum-thread-nav .close,
-.hsuforum-threads-wrapper .hsuforum-thread-title span,
+.hsuforum-footer-reply .hsuforum-cancel,
 .hsuforum-threads-wrapper .hsuforum-tools,
 .hsuforum-threads-wrapper .hsuforum-thread-nav,
 .hsuforum-threads-wrapper .hsuforum-thread-nav .hidden,
 .hsuforum-threads-wrapper .hsuforum-thread-article-expanded .hsuforum-thread-replies-meta,
-.hsuforum-threads-wrapper .hsuforum-reply-wrapper,
+.hsuforum-threads-wrapper .hsuforum-thread-article .hsuforum-reply-wrapper,
 .hsuforum-threads-wrapper .hsuforum-thread-replies,
 .hsuforum-threads-wrapper .hsuforum-thread-content {
     display: none;
@@ -199,6 +199,15 @@ span.unread {
 .hsuforum-threads-wrapper .hsuforum-thread-article-expanded .hsuforum-reply-wrapper,
 .hsuforum-threads-wrapper .hsuforum-thread-article-expanded .hsuforum-thread-content {
     display: block;
+}
+
+/* Hide pieces when doing inline editing */
+.hsuforum-threads-wrapper .hsuforum-thread-article-expanded.hsuforum-thread-edit .hsuforum-thread-header,
+.hsuforum-threads-wrapper .hsuforum-thread-article-expanded.hsuforum-thread-edit .hsuforum-thread-tools,
+.hsuforum-threads-wrapper .hsuforum-thread-article-expanded.hsuforum-thread-edit .hsuforum-thread-content,
+.hsuforum-post-edit > .hsuforum-post-figure,
+.hsuforum-post-edit > .hsuforum-post-body {
+    display: none;
 }
 
 .hsuforum-in-private-reply-to,
@@ -276,6 +285,7 @@ span.unread {
     list-style:none;
 }
 /* user image */
+.hsuforum-form .userpicture,
 .hsuforum-post .userpicture,
 .hsuforum-thread-article .userpicture {
     max-width:100%;
@@ -309,6 +319,11 @@ span.unread {
 
 .hsuforum-thread-content .attachments {
     margin-top: 10px;
+}
+
+.hsuforum-post-content .content {
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
 
 .hsuforum-tools{
@@ -371,17 +386,35 @@ span.unread {
     margin-bottom:0.5em;
 }
 
+.hsuforum-form input[type=text] {
+    width: 85%;
+}
+
 .hsuforum-form input[type=text],
-.hsuforum-form textarea {
-    width:85%;
+.hsuforum-form .textarea {
     cursor: text;
     -moz-appearance: textfield-multiline;
     -webkit-appearance: textarea;
-    border: 1px solid #ccc;
+    border: 1px solid #999;
     padding: 0.5em;
+    font-size: 99%;
 }
-.hsuforum-form textarea {
-    height:8em;
+
+.hsuforum-form .textarea {
+    height: 8em;
+    overflow: auto;
+    padding: 0.5em;
+    resize: both;
+    margin-bottom: 10px;
+}
+
+.hsuforum-form .hidden {
+    display: none;
+}
+
+.hsuforum-form div[contenteditable=true]:empty:not(:focus):before {
+    content: attr(data-placeholder);
+    color: #999
 }
 
 .hsuforum-form button {
