INT-5131, INT-5546: Fixes prev/next thread error

--- a/styles.css
+++ b/styles.css
@@ -188,7 +188,7 @@ span.unread {
 .hsuforum-footer-reply .hsuforum-cancel,
 .hsuforum-threads-wrapper .hsuforum-tools,
 .hsuforum-threads-wrapper .hsuforum-thread-nav,
-.hsuforum-threads-wrapper .hsuforum-thread-nav .hidden,
+.hsuforum-thread-nav .hidden,
 .hsuforum-threads-wrapper .hsuforum-thread-article-expanded .hsuforum-thread-replies-meta,
 .hsuforum-threads-wrapper .hsuforum-thread-article .hsuforum-reply-wrapper,
 .hsuforum-threads-wrapper .hsuforum-thread-replies,
